--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,5 +1,1 @@
-<h1>Compatibility Project</h1>
-
-<?php echo $this->tag->linkTo(array("motherboard/search", "Motherboard", 'class' => 'btn btn-success')); ?>&nbsp&nbsp
-<?php echo $this->tag->linkTo(array("os/search", "Operating System", 'class' => 'btn btn-success')); ?>&nbsp&nbsp
-<?php echo $this->tag->linkTo(array("components/search", "Components", 'class' => 'btn btn-success')); ?>&nbsp&nbsp
+<?php echo $this->getContent(); ?>
