--- a/app/views/motherboard/components.phtml
+++ b/app/views/motherboard/components.phtml
@@ -41,7 +41,7 @@
 
 						<button type="button" class="btn btn-danger <?php echo ($compatibility[$item->id]['compatible'] == -1 && ($compatibility[$item->id]['compatible'] !== "")) ? "active" : "inactive";?>" data-radio-name="compatible[<?php echo $item->id;?>][compatible]" val="-1" >No</button>
 
-						<button type="button" class="btn btn-default <?php echo ($compatibility[$item->id]['compatible'] == 0 && ($compatibility[$item->id]['compatible'] !== "")) ? "active" : "inactive";?>" data-radio-name="compatible[<?php echo $item->id;?>][compatible]" val="0" >Maybe</button>
+						<!--button type="button" class="btn btn-default <?php echo ($compatibility[$item->id]['compatible'] == 0 && ($compatibility[$item->id]['compatible'] !== "")) ? "active" : "inactive";?>" data-radio-name="compatible[<?php echo $item->id;?>][compatible]" val="0" >Maybe</button-->
 
 				</div>
 
