--- a/app/views/os/new.phtml
+++ b/app/views/os/new.phtml
@@ -3,6 +3,8 @@
 
 <?php echo $this->getContent(); ?>
 
+<?php $this->flashSession->output();?>
+
 <div align="center">
     <h1>Create os</h1>
 </div>
