--- a/app/views/components/new.phtml
+++ b/app/views/components/new.phtml
@@ -2,6 +2,8 @@
 
 <?php echo $this->getContent(); ?>
 
+<?php $this->flashSession->output();?>
+
 <div align="center">
     <h1>Create components</h1>
 </div>
