--- a/app/views/components/search.phtml
+++ b/app/views/components/search.phtml
@@ -1,49 +1,37 @@
 <?php use Phalcon\Tag; ?>
 
 <?php echo $this->getContent(); ?>
-
-<h1>Components</h1>
-
-<table width="100%">
-    <tr>
-        <td align="center">
-            <?php echo $this->tag->linkTo(array("", "Home", 'class' => 'btn btn-success')); ?>
-            <?php echo $this->tag->linkTo(array("components/new", "Create", 'class' => 'btn btn-success fancybox fancybox.iframe')); ?>
-        </td>
-    </tr>
-</table>
+<div class="row">
+    <div class="col-xs-12 col-md-2"></div>
+    
+    <div class="col-xs-12 col-md-8">
+        
+<h1>
+    Components
+    <a href="<?php echo $this->url->get("components/new"); ?>" class="btn btn-success fancybox fancybox.iframe"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+</h1>
 
 <?php $this->flashSession->output();?>
 
-<table align="center" class="table table-striped table-bordered hover dataTable" id="components-list">
+<table align="center" class="table table-striped table-bordered table-hover dataTable" id="components-list">
     <thead>
         <tr>
+            <th width="20px"></th>
             <th>Type</th>
             <th>Manufacturer</th>
             <th>Model</th>
-            <th width="20px"></th>
             <th width="20px"></th>
          </tr>
     </thead>
 
-    <tfoot>
-        <tr>
-            <th>Type</th>
-            <th>Manufacturer</th>
-            <th>Model</th>
-            <th></th>
-            <th></th>
-         </tr>
-    </tfoot>
-
     <tbody>
-    <?php foreach ($page->items as $component) { ?>
+    <?php foreach ($page as $component) { ?>
         <tr id="<?php echo $component->id ?>">
+            <td><a href="<?php echo $this->url->get("compatibility/setup?components_id=" . $component->id); ?>" class="btn btn-primary fancybox fancybox.iframe"><span class="glyphicon glyphicon-check" aria-hidden="true"></span></td>
             <td><?php echo $component->type ?></td>
             <td><?php echo $component->manufacturer ?></td>
             <td><?php echo $component->model ?></td>
-            <td><?php echo $this->tag->linkTo(array("compatibility/setup?components_id=" . $component->id, "Compatibility", "class" => "btn btn-success fancybox fancybox.iframe")); ?></td>
-            <td><?php echo $this->tag->linkTo(array("components/delete/" . $component->id, "Delete", "class" => "btn btn-danger delete")); ?></td>
+            <td><a href="<?php echo $this->url->get("components/delete/" . $component->id); ?>" class="btn btn-transparent red-color delete"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
         </tr>
     <?php } ?>
     </tbody>
@@ -51,6 +39,9 @@
 
 </table>
 
+    </div>
+    <div class="col-xs-12 col-md-2"></div>
+</div>
 <script>
 
 $(document).ready(function() {
@@ -61,9 +52,10 @@ $(document).ready(function() {
 
         }).makeEditable({
             
-            sUpdateURL: "/compatibility/components/ajaxsave",
+            sUpdateURL: "<?php echo $this->url->get("components/ajaxsave") ?>",
 
             "aoColumns": [
+                            null,
                             {
                                 onblur: 'submit',
                                 indicator: 'Saving Type ...'
@@ -76,7 +68,6 @@ $(document).ready(function() {
                                 onblur: 'submit',
                                 indicator: 'Saving Model ...'
                             },
-                            null,
                             null
                         ]
     });
