--- a/app/views/motherboard/search.phtml
+++ b/app/views/motherboard/search.phtml
@@ -2,106 +2,69 @@
 
 <?php echo $this->getContent(); ?>
 
-<h1>Motherboard</h1>
+<div class="row">
+    <div class="col-xs-12 col-md-2"></div>
+    
+    <div class="col-xs-12 col-md-8">
 
-<table width="100%">
-    <tr>
-        <td align="center">
-            <?php echo $this->tag->linkTo(array("", "Home", 'class' => 'btn btn-success')); ?>
-            <?php echo $this->tag->linkTo(array("motherboard/new", "Create", 'class' => 'btn btn-success fancybox fancybox.iframe')); ?>
-        </td>
-    </tr>
-</table>
+    <h1>
+        Motherboard
+        <a href="<?php echo $this->url->get("motherboard/new"); ?>" class="btn btn-success fancybox fancybox.iframe"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+    </h1>
 
 <?php $this->flashSession->output();?>
 
-<table align="center" class="table table-striped table-bordered hover dataTable" id="motherboard-list">
-    <thead>
-        <tr>
-            <th>Manufacturer</th>
-            <th>Model</th>
-            <th width="20px">Components</th>
-            <th width="20px">Delete</th>
-         </tr>
-    </thead>
 
-    <tfoot>
-        <tr>
-            <th>Manufacturer</th>
-            <th>Model</th>
-            <th>Components</th>
-            <th><div class="add_delete_toolbar" /></th>
-         </tr>
-    </tfoot>
+    <table align="center" class="table table-striped table-bordered table-hover dataTable" id="motherboard-list">
+        <thead>
+            <tr>
+                <th width="10px"></th>
+                <th>Manufacturer</th>
+                <th>Model</th>
+                <th width="10px"></th>
+                <th width="10px"></th>
+                <th width="10px"></th>
+             </tr>
+        </thead>
 
-    <tbody>
-    <?php foreach ($page->items as $motherboard) { ?>
-        <tr id="<?php echo $motherboard->id ?>" class="ui-state-default">
-            <td><?php echo $motherboard->manufacturer ?></td>
-            <td><?php echo $motherboard->model ?></td>
-            <td><?php echo $this->tag->linkTo(array("motherboard/components/" . $motherboard->id, "Components", "class" => "btn btn-success fancybox fancybox.iframe")); ?></td>
-            <td><?php echo $this->tag->linkTo(array("motherboard/delete/" . $motherboard->id, "Delete", "class" => "btn btn-danger delete")); ?></td>
-        </tr>
-    <?php } ?>
-    </tbody>
-    
-</table>
+        <tbody>
+        <?php foreach ($page as $motherboard) { ?>
+            <tr id="<?php echo $motherboard->id;?>" class="ui-state-default">
+                <td><a href="<?php echo $this->url->get("motherboard/motherboard/" . $motherboard->id); ?>" class="btn btn-transparent blue-color"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a></td>
+                <td><?php echo $motherboard->manufacturer ?></td>
+                <td><?php echo $motherboard->model ?></td>
+                <td><a href="<?php echo $this->url->get("motherboard/componentsAdd/" . $motherboard->id); ?>" class="btn btn-transparent blue-color fancybox fancybox.iframe"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></a></td>
+                <td><a href="<?php echo $this->url->get("motherboard/delete/" . $motherboard->id); ?>" class="btn btn-transparent red-color delete"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
+                <td class="vert-align center move"><span class="glyphicon glyphicon-move gray-color" aria-hidden="true"></span></td>
+            </tr>
+        <?php } ?>
+        </tbody>
+    </table>
 
+    </div>
+    <div class="col-xs-12 col-md-2"></div>
+</div>
 <script>
 
 $(document).ready(function() {
 
     //Rows Reordering
     //function keeping the width of TR 
-    var fixHelperModified = function(e, tr) {
-        var $originals = tr.children();
-        var $helper = tr.clone();
-        $helper.children().each(function(index) {
-            $(this).width($originals.eq(index).width())
-        });
-        return $helper;
-        };
-
-    var updateIndex = function(e, ui) {
-            $('td.index', ui.item.parent()).each(function (i) {
-                $(this).html(i + 1);
-            });
-    };
-
-    var updateSort = function (e, ui){
-        var order = $("#motherboard-list tbody").sortable("serialize");
-
-        $.ajax({
-            url: '/compatibility/motherboard/ajaxorder',
-            type: 'POST',
-            dataType: 'html',
-            data: order,
-            beforeSend: function(){},
-            error: function(xhr, textStatus, errorThrown) {},
-            success: function(data, textStatus, xhr) {
-                alert(data);
-            }
-        });
-
-    };
-
-    $("#motherboard-list tbody").sortable({
-            axis: 'y',
-            helper: fixHelperModified,
-            stop: updateIndex,
-            update: updateSort
-    }).disableSelection();
-
+    $("#motherboard-list tbody").rowsReOrdering({
+        sOrderURL: "<?php echo $this->url->get("motherboard/ajaxorder") ?>"
+    });
 
     //editable datatables
-    $('#motherboard-list').dataTable({
+    var table = $('#motherboard-list').dataTable({
             "bSort" : false,
-            aoColumns: [ {"sName": "manufacturer"}, {"sName": "model"}, {"sName": "components"}, {"sName": "id"}]
+            "iDisplayLength": 100,
+            aoColumns: [ null, {"sName": "manufacturer"}, {"sName": "model"}, null, null, null]
 
         }).makeEditable({
 
-            sUpdateURL: "/compatibility/motherboard/ajaxsave",
+            sUpdateURL: "<?php echo $this->url->get("motherboard/ajaxsave") ?>",
             "aoColumns": [
+                            null,
                             {
                                 onblur: 'submit',
                                 indicator: 'Saving Manufacturer ...'
@@ -110,6 +73,7 @@ $(document).ready(function() {
                                 onblur: 'submit',
                                 indicator: 'Saving Model ...'
                             },
+                            null,
                             null,
                             null
                         ]
