--- a/app/views/os/search.phtml
+++ b/app/views/os/search.phtml
@@ -1,19 +1,18 @@
 <?php use Phalcon\Tag; ?>
 
 <?php echo $this->getContent(); ?>
+<div class="row">
+    <div class="col-xs-12 col-md-2"></div>
+    
+    <div class="col-xs-12 col-md-8">
+        
+<h1>
+    Operating System
+    <a href="<?php echo $this->url->get("os/new"); ?>" class="btn btn-success fancybox fancybox.iframe"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+</h1>
 
-<h1>Operating System</h1>
 
-<table width="100%">
-    <tr>
-        <td align="center">
-            <?php echo $this->tag->linkTo(array("", "Home", 'class' => 'btn btn-success')); ?>
-            <?php echo $this->tag->linkTo(array("os/new", "Create", 'class' => 'btn btn-success fancybox fancybox.iframe')); ?>
-        </td>
-    </tr>
-</table>
-
-<table align="center" class="table table-striped table-bordered hover dataTable" id="os-list">
+<table align="center" class="table table-striped table-bordered table-hover dataTable" id="os-list">
     <thead>
         <tr>
             <th>Name</th>
@@ -23,28 +22,22 @@
          </tr>
     </thead>
 
-    <tfoot>
-        <tr>
-            <th>Name</th>
-            <th>Revision</th>
-            <th>Release Year</th>
-            <th></th>
-         </tr>
-    </tfoot>
-
     <tbody>
     <?php foreach ($page as $o) { ?>
         <tr id="<?php echo $o->id ?>">
             <td><?php echo $o->name ?></td>
             <td><?php echo $o->revision ?></td>
             <td><?php echo $o->release_year ?></td>
-            <td><?php echo $this->tag->linkTo(array("os/delete/" . $o->id, "Delete", "class" => "btn btn-danger delete")); ?></td>
+            <td><a href="<?php echo $this->url->get("os/delete/" . $o->id); ?>" class="btn btn-transparent red-color delete"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></a></td>
         </tr>
     <?php } ?>
     </tbody>
 
 </table>
 
+    </div>
+    <div class="col-xs-12 col-md-2"></div>
+</div>
 <script>
 
 $(document).ready(function() {
@@ -54,7 +47,7 @@ $(document).ready(function() {
             aoColumns: [{"sName": "name"}, {"sName": "revision"}, {"sName": "release_year"}, null]
 
         }).makeEditable({
-            AddURL: "/compatibility/os/create",
+            AddURL: "<?php echo $this->url->get("os/create") ?>",
             sUpdateURL: "/compatibility/os/ajaxsave",
             "aoColumns": [
                             {
